tests/NormalTests/paczka1/fuzzy1/20660623.err
Error in line 1: JYg5 S329 58,34
Error in line 2: JYg5 S329 273,3
Error in line 3: KcUwBfW S329 2,9
Error in line 9: KcUwBfW A440 78,3
Error in line 10: KcUwBfW S329 66,0
Error in line 8: PQyC S329 49,7
Error in line 23: S329 A440 14,2
Error in line 38: PQyC S329 87,51
Error in line 37: PQyC S418 299,5
